--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Style the header*/
+/* Style the header section */
+
 header {
   background-color: rgb(255, 30, 188);
   padding: 30px;
@@ -80,7 +81,7 @@ footer {
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Register here</a></li>
-      <li><a href="#">Contact us</a></li>
+      <li><a href="#">About us</a></li>
     </ul>
   </nav>
   
