--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Style the header*/
 header {
   background-color: rgb(255, 30, 188);
   padding: 30px;
@@ -72,7 +71,7 @@ footer {
 <body>
 
 <header>
-  <h2>Welcome to entelect GirCode workshop 2023</h2>
+<h2>Welcome to Intelekt GirCode workshop 2023</h2>
 </header>
 
 <section>
@@ -80,7 +79,7 @@ footer {
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Register here</a></li>
-      <li><a href="#">Contact us</a></li>
+      <li><a href="#">About us</a></li>
     </ul>
   </nav>
   
