--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ footer {
 <body>
 
 <header>
-<h2>Welcome to Intelekt GirCode workshop 2023</h2>
+<h2>Welcome to entelect GirlCode workshop 2024</h2>
 </header>
 
 <section>
@@ -79,7 +79,7 @@ footer {
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Register here</a></li>
-      <li><a href="#">About us</a></li>
+      <li><a href="#">Contact us</a></li>
     </ul>
   </nav>
   
