--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   box-sizing: border-box;
 }
 
-body {
+body 
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -71,7 +71,7 @@ footer {
 <body>
 
 <header>
-<h2>Welcome to Intelekt GirCode workshop 2023</h2>
+<h2>Welcome to Intelect GirCode workshop 2024</h2>
 </header>
 
 <section>
